--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
 python-telegram-bot>=13.11
 yt-dlp>=2022.6.29
-loguru
+loguru~=0.6.0
+unittest2~=1.1.0
+botocore~=1.27.20
+boto3~=1.24.20
+telegram~=0.0.1
